remove bad layout fix - add beautiful scroll effect on mobile/tablet header

--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -80,6 +80,9 @@
       margin: 1.5rem 1.5rem 0;
     }
   }
+  &.border-bottom {
+    box-shadow: 2px 2px 6px $border-color;
+  }
   @include media-breakpoint-up(lg) {
     .navbar-nav {
       margin-bottom: 0;
